# Request-Catcher

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  responses.yaml.example
.github/workflows/: docker-publish.yml
app/: auth.py  config.py  main.py  models.py  storage.py
app/templates/: index.html
docs/superpowers/plans/: 2026-06-24-rule-auth-and-conditional-match.md
docs/superpowers/specs/: 2026-06-24-auth-header-support-design.md  2026-06-24-conditional-match-by-query-and-body-design.md
tests/: conftest.py  test_config.py  test_main.py  test_storage.py
